--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -42,8 +42,8 @@
 <blockquote class="middle">
 	<p><%= t('home.quote') %></p>
 	<footer>
-	<a href="https://commons.wikimedia.org/wiki/Category:Maya_Angelou#/media/File:Angelou_at_Clinton_inauguration.jpg">
-		<img src="/images/maya_angelou.jpg" alt="<%= t('home.cite_image') %>">
+	<a href="https://commons.wikimedia.org/wiki/File:Malala_Yousafzai_2015.jpg">
+		<img src="/images/malala_yousafzai.jpg" alt="<%= t('home.cite_image') %>">
 	</a>
       <p><%= t('home.cite') %></p>
     </footer>
