--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -7,17 +7,17 @@
 </div>
 <div class="col-md-3">
 	<section class="scorecard">
-		<h2><%= t('dates.jan') %> – <%= t('dates.jun') %> 2018</h2>
+		<h2><%= t('dates.jul') %> – <%= t('dates.dec') %> 2018</h2>
 		<dl>
 			<dt><%= t('privacy.total_number_of_requests') %></dt>
-			<dd>23</dd>
+			<dd>25</dd>
 		</dl>
 	</section>
 	<section class="scorecard scorecard_bottom">
-		<h2><%= t('dates.jan') %> – <%= t('dates.jun') %> 2018</h2>
+		<h2><%= t('dates.jul') %> – <%= t('dates.dec') %> 2018</h2>
 		<dl>
 			<dt><%= t('privacy.percentage_of_times_information_produced') %></dt>
-			<dd>9<small>%</small></dd>
+			<dd>16<small>%</small></dd>
 		</dl>
 	</section>
 </div>
@@ -29,8 +29,8 @@
 	<blockquote>
 		<p><%= t('privacy.quote') %></p>
 		<footer>
-			<a href="https://commons.wikimedia.org/wiki/Category:Salil_Shetty#/media/File:Salil-Shetty.jpg">
-				<img src="/images/salil_shetty.jpg" alt="<%= t('privacy.quote_image') %>">
+			<a href="https://commons.wikimedia.org/wiki/File:Sonia_Sotomayor_6_sitting,_2009.jpg">
+				<img src="/images/sonia_sotomayor.jpg" alt="<%= t('privacy.quote_image') %>">
 			</a>
 			<p><%= t('privacy.cite') %></p>
 		</footer>
@@ -39,50 +39,50 @@
 <div class="col-md-12 summary__wrapper">
 	<div class="story summary_table">
 		<h3 id="summary">
-			<small><%= t('dates.jan') %> – <%= t('dates.jun') %> 2018</small><br>
+			<small><%= t('dates.jul') %> – <%= t('dates.dec') %> 2018</small><br>
 			<%= t('privacy.summary') %>
 		</h3>
 		<hr>
 		<table>
 			<tr class="highlight">
 				<td><%= t('privacy.total_number_of_requests') %></td>
-				<td>23</td>
+				<td>25</td>
 			</tr>
 			<tr>
 				<td class="indent">
 					<a href="./faq.html#informal_non_government_requests"><%= t('privacy.informal_non_govt') %>
 				</td>
-				<td>16</td>
+				<td>10</td>
 			</tr>
 			<tr>
 				<td class="indent">
 					<a href="./faq.html#informal_government_requests"><%= t('privacy.informal_govt') %></a>
 				</td>
-				<td>5</td>
+				<td>9</td>
 			</tr>
 			<tr>
 				<td class="indent">
 					<a href="./faq.html#civil_subpoena"><%= t('privacy.civil_subpoenas') %></a>
 				</td>
-				<td>2</td>
+				<td>1</td>
 			</tr>
 			<tr>
 				<td class="indent">
 					<a href="./faq.html#criminal_subpoena"><%= t('privacy.criminal_subpoenas') %></a>
 				</td>
-				<td>0</td>
+				<td>2</td>
 			</tr>
 			<tr>
 				<td class="indent">
 					<a href="./faq.html#administrative_subpoena"><%= t('privacy.administrative_subpoenas') %></a>
 				</td>
-				<td>0</td>
+				<td>2</td>
 			</tr>
 			<tr>
 				<td class="indent">
 					<a href="./faq.html#search_warrant"><%= t('privacy.search_warrants') %></a>
 				</td>
-				<td>0</td>
+				<td>1</td>
 			</tr>
 			<tr>
 				<td class="indent">
@@ -98,24 +98,24 @@
 			</tr>
 			<tr class="highlight">
 				<td><%= t('privacy.information_produced') %></td>
-				<td>2</td>
+				<td>4</td>
 			</tr>
 		</table>
 	</div>
 	<div class="story story_bottom">
 		<h3>
-			<small><%= t('dates.jan') %> – <%= t('dates.jun') %> 2018</small><br>
+			<small><%= t('dates.jul') %> – <%= t('dates.dec') %> 2018</small><br>
 			<%= t('privacy.user_accounts_affected') %>
 		</h3>
 		<hr>
 		<table>
 			<tr class="indent">
 				<td><%= t('privacy.user_potentially_affected') %></td>
-				<td>30</td>
+				<td>6722</td>
 			</tr>
 			<tr class="indent">
 				<td><%= t('privacy.user_actually_affected') %></td>
-				<td>3</td>
+				<td>6674</td>
 			</tr>
 			<tr class="indent">
 				<td><%= t('privacy.user_accounts_notified') %></td>
@@ -131,7 +131,7 @@
 	</div>
 	<div class="col-md-3">
 		<section class="scorecard">
-			<h2><%= t('dates.jan') %> – <%= t('dates.jun') %> 2018</h2>
+			<h2><%= t('dates.jul') %> – <%= t('dates.dec') %> 2018</h2>
 			<dl>
 				<dt><%= t('privacy.content_requests') %></dt>
 				<dd>0<small>%</small></dd>
@@ -140,7 +140,7 @@
 	</div>
 	<div class="col-md-3">
 		<section class="scorecard">
-			<h2><%= t('dates.jan') %> – <%= t('dates.jun') %> 2018</h2>
+			<h2><%= t('dates.jul') %> – <%= t('dates.dec') %> 2018</h2>
 			<dl>
 				<dt><%= t('privacy.non-content_requests') %></dt>
 				<dd>100<small>%</small></dd>
@@ -154,7 +154,7 @@
 		<ul class="tabs">
 			<li>
 				<a id="bubble_graph_juldec17" class="bubble_graph_tabs active" href="javascript: void(0);">
-					<%= t('dates.jul') %> - <%= t('dates.dec') %> 2017
+					<%= t('dates.jan') %> - <%= t('dates.jun') %> 2018
 				</a>
 			</li>
 		</ul>
@@ -188,7 +188,8 @@
 			<li><a id="user_data_juldec16" class="user_data_tabs" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2016</a></li>
 			<li><a id="user_data_janjun17" class="user_data_tabs" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2017</a></li>
 			<li><a id="user_data_juldec17" class="user_data_tabs" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2017</a></li>
-			<li><a id="user_data_janjun18" class="user_data_tabs active" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2018</a></li>
+			<li><a id="user_data_janjun18" class="user_data_tabs" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2018</a></li>
+			<li><a id="user_data_juldec18" class="user_data_tabs active" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2018</a></li>
 		</ul>
 		<div class="graph">
 			<div class="row">
@@ -217,7 +218,7 @@
 <div class="col-md-8 col-md-offset-2">
 	<div class="story">
 		<h3>
-			<small><%= t('dates.jan') %> – <%= t('dates.jun') %> 2018</small><br>
+			<small><%= t('dates.jul') %> – <%= t('dates.dec') %> 2018</small><br>
 			<%= t('privacy.govt_requests') %>
 		</h3>
 		<hr>
@@ -225,26 +226,83 @@
 			<tr class="highlight">
 				<td><%= t('graph.informal_government_requests') %></td>
 				<td>Total</td>
-				<td>5</td>
+				<td>9</td>
 			</tr>
 			<tr>
-				<td class="indent"><%= t('graph.greece') %></td>
+				<td class="indent"><%= t('graph.australia') %></td>
 				<td><%= t('graph.state_police') %></td>
 				<td>1</td>
 			</tr>
 			<tr>
-				<td class="indent noborder"><%= t('graph.italy') %></td>
+				<td class="indent noborder"><%= t('graph.canada') %></td>
 				<td><%= t('graph.state_police') %></td>
-				<td>2</td>
+				<td>1</td>
 			</tr>
 			<tr>
 				<td class="indent"></td>
-				<td><%= t('graph.public_prosecutor') %></td>
+				<td><%= t('graph.federal_police') %></td>
 				<td>1</td>
 			</tr>
+
+			<tr>
+				<td class="indent"><%= t('graph.germany') %></td>
+				<td><%= t('graph.local_police') %></td>
+				<td>1</td>
+			</tr>
+
 			<tr>
 				<td class="indent"><%= t('graph.india') %></td>
 				<td><%= t('graph.local_police') %></td>
+				<td>3</td>
+			</tr>
+			<tr>
+				<td class="indent"><%= t('graph.italy') %></td>
+				<td><%= t('graph.state_police') %></td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<td class="indent"><%= t('graph.united_kingdom') %></td>
+				<td><%= t('graph.administrative_agency') %></td>
+				<td>1</td>
+			</tr>
+			<tr class="highlight">
+				<td><%= t('graph.administrative_subpoenas') %></td>
+				<td>Total</td>
+				<td>2</td>
+			</tr>
+			<tr>
+				<td class="indent"><%= t('graph.usa') %></td>
+				<td><%= t('graph.administrative_agency') %></td>
+				<td>2</td>
+			</tr>
+			<tr class="highlight">
+				<td><%= t('graph.civil_subpoenas') %></td>
+				<td>Total</td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<td class="indent"><%= t('graph.usa') %></td>
+				<td><%= t('graph.doj') %></td>
+				<td>1</td>
+			</tr>
+			<tr class="highlight">
+				<td><%= t('graph.criminal_subpoenas') %></td>
+				<td>Total</td>
+				<td>2</td>
+			</tr>
+			<tr>
+				<td class="indent"><%= t('graph.usa') %></td>
+				<td><%= t('graph.district_court') %></td>
+				<td>2</td>
+			</tr>
+			<tr class="highlight">
+				<td><%= t('graph.search_warrants') %></td>
+				<td>Total</td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<td class="indent"><%= t('graph.usa') %></td>
+				<td><%= t('graph.district_court') %></td>
 				<td>1</td>
 			</tr>
 		</table>
@@ -254,10 +312,10 @@
 <br> <br> <br> <br>
 <div class="col-md-3">
   <section class="scorecard">
-    <h2><%= t('dates.jan') %> – <%= t('dates.jun') %> 2018</h2>
+    <h2><%= t('dates.jul') %> – <%= t('dates.dec') %> 2018</h2>
     <dl>
       <dt><%= t('privacy.total_preservation_requests') %></dt>
-      <dd>0</dd>
+      <dd>2</dd>
     </dl>
   </section>
 </div>
@@ -269,10 +327,10 @@
 <br> <br> <br> <br>
 <div class="col-md-3">
   <section class="scorecard">
-    <h2><%= t('dates.jan') %> – <%= t('dates.jun') %> 2018</h2>
+    <h2><%= t('dates.jul') %> – <%= t('dates.dec') %> 2018</h2>
     <dl>
       <dt><%= t('privacy.total_number_of_emergency_disclosures') %></dt>
-      <dd>12</dd>
+      <dd>13</dd>
     </dl>
   </section>
 </div>
@@ -285,18 +343,15 @@
 <div class="col-md-8 col-md-offset-2">
 	<div class="story story_bottom">
 		<h3>
-			<small><%= t('dates.jan') %> – <%= t('dates.jun') %> 2018</small><br>
+			<small><%= t('dates.jul') %> – <%= t('dates.dec') %> 2018</small><br>
 			<%= t('privacy.total_number_of_emergency_disclosures') %>
 		</h3>
 		<hr>
 		<table>
-			<tr class="indent">
-				<td><%= t('privacy.total_emergency_requests') %></td>
-				<td>1</td>
-			</tr>
+
 			<tr class="indent">
 				<td><%= t('privacy.total_voluntary_disclosures') %></td>
-				<td>11</td>
+				<td>13</td>
 			</tr>
 		</table>
 	</div>
@@ -331,7 +386,7 @@
 	<ul class="tabs">
 		<li>
 			<a class="active voluntary_disclosure" id="voluntary_disclosure_juldec14" href="javascript: void(0);">
-				<%= t('dates.jan') %> - <%= t('dates.jun') %> 2018
+				<%= t('dates.jul') %> - <%= t('dates.dec') %> 2018
 			</a>
 		</li>
 	</ul>
@@ -358,6 +413,7 @@
 <input type="hidden" id="t_france" value="<%= t('graph.france') %>">
 <input type="hidden" id="t_germany" value="<%= t('graph.germany') %>">
 <input type="hidden" id="t_india" value="<%= t('graph.india') %>">
+<input type="hidden" id="t_japan" value="<%= t('graph.japan') %>">
 <input type="hidden" id="t_singapore" value="<%= t('graph.singapore') %>">
 <input type="hidden" id="t_new_zealand" value="<%= t('graph.new_zealand') %>">
 <input type="hidden" id="t_malaysia" value="<%= t('graph.malaysia') %>">
@@ -379,6 +435,7 @@
 <input type="hidden" id="t_greece" value="<%= t('graph.greece') %>">
 
 <input type="hidden" id="t_criminal_subpoenas" value="<%= t('graph.criminal_subpoenas') %>">
+<input type="hidden" id="t_administrative_subpoena" value="<%= t('graph.administrative_subpoenas') %>">
 <input type="hidden" id="t_informal_non_government_requests" value="<%= t('graph.informal_non_government_requests') %>">
 <input type="hidden" id="t_civil_subpoenas" value="<%= t('graph.civil_subpoenas') %>">
 <input type="hidden" id="t_informal_government_requests" value="<%= t('graph.informal_government_requests') %>">
