--- a/source/localizable/stories.html.erb
+++ b/source/localizable/stories.html.erb
@@ -5,6 +5,73 @@
     </span>
   </h1>
 </div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/Palazzo_Madama_(Turin)#/media/File:Torino-palazzomadama01.jpg">
+    	<img src="/images/story_torino.jpg" alt="">
+    </a>
+    <h3><%= t('content.story_police_title') %></h3>
+    <p><%= t('content.story_police_body') %></p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Rory_sketch_-_confused.jpg">
+    	<img src="/images/story_return_to_sender.jpg" alt="">
+    </a>
+    <h3><%= t('content.story_name_return_to_sender_title') %></h3>
+    <p><%= t('content.story_name_return_to_sender_body') %></p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Virus_detected_warning.jpg">
+    	<img src="/images/story_viral_dcma.jpg" alt="">
+    </a>
+    <h3><%= t('content.story_viral_dmca_title') %></h3>
+    <p><%= t('content.story_viral_dmca_body') %></p>
+  </div>
+</div>
+
+<div class="clear"></div>
+<br><br>
+
+<div class="col-md-4">
+  <div class="story">
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Virus_detected_warning.jpg">
+    	<img src="/images/story_name_of_my_name.jpg" alt="">
+    </a>
+    <h3><%= t('content.story_name_of_my_name_title') %></h3>
+    <p><%= t('content.story_name_of_my_name_body') %></p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Crowning_Glory_(16408144069).jpg">
+    	<img src="/images/story_crowning_glory.jpg" alt="">
+    </a>
+    <h3><%= t('content.story_two_tales_title') %></h3>
+    <p><%= t('content.story_two_tales_body') %></p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Smithsonian_woolly_mammoth.jpg">
+    	<img src="/images/story_woolly_mammoth.jpg" alt="">
+    </a>
+    <h3><%= t('content.story_diorama_dilemma_title') %></h3>
+    <p><%= t('content.story_diorama_dilemma_body') %></p>
+  </div>
+</div>
+
+<div class="clear"></div>
+<br><br>
+
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Turkey_travel_(2315933487).jpg">
