fix: Update links to new Wikimedia Foundation site
From
https://foundation.wikimedia.org/wiki/Non-wiki_privacy_policy
to https://wikimediafoundation.org/privacy-policy/

From https://blog.wikimedia.org/
to https://wikimediafoundation.org/news/

From https://wikimediafoundation.org/wiki/Vision
to https://wikimediafoundation.org/about/mission/

From ./data/data_jun_2018.ods
to ./data/data_jun_2018.xlsx

Bug: T229175
Change-Id: Ida14e02d3774b24cc1dfc42da6040179c4ececb7

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -73,15 +73,15 @@
 				<div class="footer__block col-md-2">
 					<ul>
 						<li><a href="https://meta.wikimedia.org/wiki/Wikimedia_Foundation_Transparency_Report"><%= t('menu.wiki_version') %></a></li>
-						<li><a href="./data/data_jun_2018.ods"><%= t('menu.download_data') %></a></li>
-						<li><a href="https://foundation.wikimedia.org/wiki/Non-wiki_privacy_policy"><%= t('menu.privacy_policy') %></a></li>
+						<li><a href="./data/data_jun_2018.xlsx"><%= t('menu.download_data') %></a></li>
+						<li><a href="https://wikimediafoundation.org/privacy-policy/"><%= t('menu.privacy_policy') %></a></li>
 						<li><a href="https://meta.wikimedia.org/wiki/Data_retention_guidelines"><%= t('menu.data_retention_guidelines') %></a></li>
 					</ul>
 				</div>
 				<div class="footer__block col-md-2">
 					<ul>
 						<li><a href="https://wikimediafoundation.org"><%= t('menu.about_us') %></a></li>
-						<li><a href="https://blog.wikimedia.org/"><%= t('menu.blog') %></a></li>
+						<li><a href="https://wikimediafoundation.org/news/"><%= t('menu.blog') %></a></li>
 						<li><a href="https://wikimediafoundation.org/wiki/Terms_of_Use"><%= t('menu.tou') %></a></li>
 					</ul>
 				</div>
